--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<app-root>Loading...?</app-root>
+<app-root>Loading I am SAGE...</app-root>
 </body>
 </html>
